Code Quality improvement and student status validation logic